--- a/app/templates/admin/dashboard_payments.html
+++ b/app/templates/admin/dashboard_payments.html
@@ -69,6 +69,11 @@
               <td>${{ "{:,}".format(order.amount_clp) }} {{ order.currency }}</td>
               <td>{{ order.payment_status.value }}</td> <!--<span class="badge text-bg-warning">{{ order.payment_status.value }}</span>-->
               <td class="text-center">
+                  {% if order.payment_method.name == 'webpay' %}
+                      <a class="btn btn-outline-primary btn-sm mb-2" href="{{ url_for('orders.start_webpay', order_id=order.id) }}" target="_blank" rel="noopener">
+                          Iniciar Webpay
+                      </a><br>
+                  {% endif %}
                   {% if current_user.is_authenticated and current_user.is_admin %}
                       <form action="{{ url_for('orders.confirm_payment', order_id=order.id) }}"
                             method="post" class="d-inline">
