--- a/app/templates/admin/dashboard_payments.html
+++ b/app/templates/admin/dashboard_payments.html
@@ -15,7 +15,7 @@
       <ul class="list-inline mb-0">
         {% for c in new_children %}
           <li class="list-inline-item">
-            <span class="badge text-bg-primary">{{ c.name }}</span>
+            <<span class="badge bg-primary text-dark">{{ c.name }}</span>
           </li>
         {% endfor %}
       </ul>
