--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block hero %}
     <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-fade="true">
-        <div class="slide kenburns" data-bg-image="{{ url_for('static', filename='images/slider/notgeneric_bg3.jpg') }}">
+        <div class="slide kenburns" data-bg-image="{{ url_for('static', filename='images/slider/fondo_ajedrezrecreativo.png') }}">
             <div class="bg-overlay light"></div>
             <div class="container">
                 <div class="slide-captions text-center text-light">
