--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,6 +82,7 @@
 
     <!-- Page content -->
     <main>
+        {% block flash_messages %}
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <div class="container mt-3">
@@ -94,6 +95,7 @@
                 </div>
             {% endif %}
         {% endwith %}
+        {% endblock %}
         {% block content %}{% endblock %}
     </main>
 
